--- a/pages/about.html
+++ b/pages/about.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/style.css" />
     <title>Portal Guce Plays</title>
   </head>
-  <a href="#top"></a>
+
   <body>
     <header class="header">
       <!--Logo e menu -->
@@ -43,8 +43,34 @@
         </ul>
       </nav>
     </header>
-    <main>
-
+    <main class="container">
+      <div class="title">
+        <h1 class="main-title">GUCE PLAYS!</h1>
+        <p class="description">
+            Aqui você vai encontrar dados sobre o criador do portal.
+        </p>
+      </div>
+      <section class="about-container">
+        <div class="about-text">
+          <p>Tudo começou em Agosto de 2022, quando comecei um curso de Full Stack em JavaScrip e para treinar decidi criar esse site e compartilhar com vocês um pouco das habilidades que adquiri com apenas 1 semana de curso.</p>
+          <p>Como ainda estou em aprendizado, essa é apenas a pagina versão 1.0 desse site, demorei aproximadamente 20h para desenvolver todo o site, fiquei muito feliz com o resultado e espero que vocês gostem.</p>
+        </div>
+        <div class="about-info">
+          <p>Abaixo segue algumas informações sobre mim.</p>
+          <ul>
+            <li>Nome completo: Danilo Tramontina</li>
+            <li>Data de Nascimento: 04/09/1986</li>
+            <li>Natural de: Americana - SP</li>
+            <li>Profissão: Empreendedor</li>
+            <li>Sonhos: <p>Adquirir um Corolla Cross e viajar para o exterior.</p></li>
+            <li>Projetos em andamento:</li>
+              <ul>
+                <li>Curso OneBitCode FullStack JavaScript</li>
+                <li>Processo de emagrecimento</li>
+              </ul>
+          </ul>
+        </div>
+      </section>
     </main>
     <section class="footer-menu">
       <a href="../index.html">
@@ -54,7 +80,7 @@
           class="img-logo"
         />
       </a>
-      <nav class="footer-menu">
+      <nav class="footer-menu-nav">
         <ul class="menu-list">
           <li class="menu-item">
             <a href="../index.html"><button class="btn-menu">Home</button></a>
@@ -76,7 +102,6 @@
           </li>
         </ul>
       </nav>
-      <a href="#top" class="back-to-top">Inicio da Pagina</a>
     </section>
     <footer class="footer">
       <h3>By Danilo Tramontina</h3>
