--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
           class="img-logo"
         />
       </a>
-      <nav class="footer-menu">
+      <nav class="footer-menu-nav">
         <ul class="menu-list">
           <li class="menu-item">
             <a href="index.html"><button class="btn-menu">Home</button></a>
