--- a/pages/register.html
+++ b/pages/register.html
@@ -40,9 +40,12 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <div class="form-title">
-        <h1>CADASTRO</h1>
+    <main class="container">
+      <div class="title">
+        <h1 class="main-title">CADASTRO</h1>
+        <p class="description">
+          Faça seu cadastro abaixo.
+        </p>
       </div>
       <section class="main-form">
         <div class="form-data">
@@ -137,7 +140,7 @@
           />
         </a>
       </div>
-      <nav class="footer-menu">
+      <nav class="footer-menu-nav">
         <ul class="menu-list">
           <li class="menu-item">
             <a href="../index.html"><button class="btn-menu">Home</button></a>
