--- a/pages/about.html
+++ b/pages/about.html
@@ -60,15 +60,17 @@
           <ul>
             <li>Nome completo: Danilo Tramontina</li>
             <li>Data de Nascimento: 04/09/1986</li>
-            <li>Natural de: Americana - SP</li>
-            <li>Profissão: Empreendedor</li>
-            <li>Sonhos: <p>Adquirir um Corolla Cross e viajar para o exterior.</p></li>
-            <li>Projetos em andamento:</li>
-              <ul>
+            <li>Natural de Americana - SP</li>
+            <li>Meus sonhos materias atualmente são, adquirir um Corolla Cross e viajar para o exterior.</li>
+            <li>Projetos em andamento:
+              <ul class="sec-list">
                 <li>Curso OneBitCode FullStack JavaScript</li>
                 <li>Processo de emagrecimento</li>
               </ul>
+            </li>
           </ul>
+          <p>Isso é tudo pessoal.</p>
+          <p>Site criado em 16/08/2022</p>
         </div>
       </section>
     </main>
