--- a/pages/register.html
+++ b/pages/register.html
@@ -68,6 +68,7 @@
               <input type="text" name="cpf" \
 			        pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" \
 			        title="xxx.xxx.xxx-xx"
+              placeholder="xxx.xxx.xxx-xx"
               class="form-data-input" 
               required
               />
